# NetBlast

./: README.md  Vagrantfile  default.nix  dpdk-devbind.py  flake.nix  setup.sh  vm-devbind.sh
.vagrant/bundler/: global.sol
.vagrant/machines/vm1/libvirt/: action_provision  created_networks  id  index_uuid  private_key
.vagrant/machines/vm2/libvirt/: action_provision  created_networks  id  index_uuid  private_key  vagrant_cwd
docs/: data.txt  results.json
l2fwd/: .gitignore  README.md  collect_data.py  main.c  meson.build  run.sh
l2fwd/libsashstore/: Makefile  conshash.c  dramblast.c  dramblast.h  hash.h  hashmap.c  hashmap.h  maglev.c  maglev.h  meson.build  packettool.c  packettool.h
maglevgen/: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  maglevgen  maglevgen_static
maglevgen/src/: main.rs
maglevgen/src/examples/: echoer.rs  mempunch.rs
maglevl2fwd/: README.md  build.sh  flake.nix  main.c  meson.build  package.nix  setup.sh
maglevl2fwd/libsashstore/: conshash.c  conshash.h  dramblast.c  dramblast.h  hash.c  hashmap.h  maglev.c  meson.build  packettool.c  sashstore.c  sashstore.h
nix/: sources.json
pktgen/: build.sh  my_pktgen  pktgen.c  run.sh
scripts/: bind-dpdk-devices.sh  constant_freq.sh  get-dpdk-ice.sh  prefetch_control.sh
