[package]
name = "maglevgen"
version = "0.1.0"
authors = ["Zhaofeng Li <hello@zhaofeng.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ixy = { git = "https://github.com/ixy-languages/ixy.rs", rev = "cdc38ed59a24f2a483485f7a1814d9ba30fa6d27" }

byteorder = "1.4.3"
simple_logger = "1.12.1"
